k8s/prod/cluster-00-overlay/register-org-ingress-v1.yaml
# this is to apply permanent redirect on register-org domain
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/redirect-permanent: "true"
    traefik.ingress.kubernetes.io/redirect-regex: ^https://register-org.platform.hmcts.net/(.*)
    traefik.ingress.kubernetes.io/redirect-replacement: https://manage-org.platform.hmcts.net/register-org/register
  name: register-org-ingress
  namespace: xui
spec:
  rules:
    - host: register-org.platform.hmcts.net
      http:
        paths:
          - backend:
              service:
                name: xui-mo-webapp-nodejs
                port:
                  number: 80
            path: /
            pathType: ImplementationSpecific
